--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -63,8 +63,15 @@
             </p>
             <div class="userstory">
               <h3>QUEM?</h3>
+                    <p class="qpo">Define quem é o usuário que tem a necessidade.<br> 
+                        “QUEM” ajuda a criar no leitor da User Story uma imagem<br>
+                        mental desse usuário.</p>
               <h3 id="h3branco">POR QUE?</h3>
+                    <p class="qpo">Define qual o benefício do usuário ao ter<br> a funcionalidade desenvolvida para atender a 
+                        essa necessidade.<br> Em outras palavras, qual o valor direto obtido.</p>
               <h3>O QUE?</h3>
+                    <p class="qpo">Define qual é a necessidade do usuário.<br> Tradicionalmente, 
+                        os requisitos do produto são representados<br> apenas por essa parte.</p>
             </div>
 
             <h2 id="margin">Como fazer uma User Story?</h2>
@@ -91,6 +98,7 @@
             o MVP contém as funcionalidades necessárias para resolver o problema do cliente, porém não está completo. Como essa
             ferramenta é rapidamente lançada no mercado, os desenvolvedores possuem a vantagem de obter um feedback do produto e validar
             o investimento.</p>
+            <img id="mvpimg" src="imagens/mvp.png" alt="mvp">
         <h2 id="margin">Como fazer o MVP?</h2>
         <p>Deve-se considerar a necessidade do cliente, pois mesmo que o MVP seja uma versão incompleta do produto, ele deve ter funcionalidades
             suficientes para representar uma entrega de valor. Ou seja, elabore o produto pensando no que o cliente precisa.
