--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -63,14 +63,14 @@
             </p>
             <div class="userstory">
               <h3>QUEM?</h3>
-                    <p class="qpo">Define quem é o usuário que tem a necessidade.<br> 
+                    <p id="qpo">Define quem é o usuário que tem a necessidade.<br> 
                         “QUEM” ajuda a criar no leitor da User Story uma imagem<br>
                         mental desse usuário.</p>
               <h3 id="h3branco">POR QUE?</h3>
-                    <p class="qpo">Define qual o benefício do usuário ao ter<br> a funcionalidade desenvolvida para atender a 
+                    <p id="qpo">Define qual o benefício do usuário ao ter<br> a funcionalidade desenvolvida para atender a 
                         essa necessidade.<br> Em outras palavras, qual o valor direto obtido.</p>
               <h3>O QUE?</h3>
-                    <p class="qpo">Define qual é a necessidade do usuário.<br> Tradicionalmente, 
+                    <p id="qpo">Define qual é a necessidade do usuário.<br> Tradicionalmente, 
                         os requisitos do produto são representados<br> apenas por essa parte.</p>
             </div>
 
