--- a/Páginas API/avaliações.html
+++ b/Páginas API/avaliações.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <p style="margin-bottom: 0px;margin-left: 7px; font-size: 65px;">TESTE</p>
-        <p style="margin-top: 0px; margin-left: 55px;font-size: 35px; color:#d4af37;">DE COMPREENSÃO</p>
+        <p>TESTE</p>
+        <p id="teste">DE COMPREENSÃO</p>
     </header>
     <main>
         <section>
