--- a/Páginas API/master.html
+++ b/Páginas API/master.html
@@ -16,7 +16,7 @@
         <section>
             <h2>O QUE É?</h2>
             <img src="imagens/master.jpg" id="img">
-            <p>O Scrum Master é o papel de líder responsável por facilitar e garantir o cumprimento dos processos Scrum. 
+            <p id="alinhar">O Scrum Master é o papel de líder responsável por facilitar e garantir o cumprimento dos processos Scrum. 
                 No entanto, é importante destacar que o Scrum Master não é um chefe, pois, no Scrum, as equipes são 
                 autogerenciáveis. Sua função é guiar a equipe na adoção dos processos e valores do Scrum, apoiando-a 
                 para que trabalhe de maneira produtiva e sustentável.</p>
