--- a/Páginas API/po.html
+++ b/Páginas API/po.html
@@ -15,7 +15,7 @@
     <section>
         <h2>O QUE É PRODUCT OWNER?</h2>
         <img src="imagens/p.o.png" id="img">
-        <p>O Product Owner, geralmente abreviado como P.O, é a pessoa responsável por garantir a comunicação entre 
+        <p id="alinhar">O Product Owner, geralmente abreviado como P.O, é a pessoa responsável por garantir a comunicação entre 
             a equipe de desenvolvimento e os clientes do projeto. Ele define a visão do produto, prioriza as 
             funcionalidades e mantém a equipe focada nas necessidades identificadas e na direção solicitada pela 
             organização. É importante que haja apenas um Product Owner dentro da equipe, pois evita conflitos de 
