--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -13,13 +13,12 @@
     <header>
         <h1>ARTEFATOS</h1>
     </header>
-
-    <section>
+    <main>
+      <section>
         <h2 id="margin">O QUE SÃO?</h2>
         <p>Os artefatos são ferramentas de gerenciamento utilizadas no scrum que além de auxiliarem no
             planejamento também fornecem informações importantes para a equipe e os demais interessados no projeto.
-            A seguir, você verá mais detalhadamente sobre cada ferramenta e sua elaboração.
-        </p>
+            A seguir, você verá mais detalhadamente sobre cada ferramenta e sua elaboração.</p>
     </section>
 
     <section>
@@ -28,15 +27,13 @@
         <p> O Backlog é uma lista de todos os requisitos, melhorias e correções do produto, ou seja, tudo aquilo que 
             deve ser desenvolvido pela equipe. Esse documento está em constante alteração, passando por redefinições
             de prioridade conforme necessário. O Product Owner é o responsável por criar e alterar essa lista, satisfazendo
-            as necessidades do cliente.
-        </p>
+            as necessidades do cliente.</p>
         <h2>Como montar o Backlog?</h2>
         <p style="margin-top: -3%;"> O Product Owner deve conversar com o cliente e fazer um levantamento de todos os requisitos. Após entender a
             visão do produto, as Epics, funcionalidades de maior nível, devem ser identificadas e priorizadas em relação
             as demais tarefas. Depois, essas Epics devem ser divididas em User Story (você entenderá melhor esse conceito
             mais abaixo) e as tarefas devem ser divididas por de prioridade. Por fim, é essencial fazer uma estimativa
-            para cada item do backlog, conforme o nível de dificuldade. 
-        </p>
+            para cada item do backlog, conforme o nível de dificuldade.</p>
     </section>
 
     <section>
@@ -52,34 +49,25 @@
             que representa o trabalho real seja diferente da estimativa, afinal, podem existir muitos imprevistos ao longo
             do desenvolvimento que atrasem a conclusão das atribuições. Da mesma forma, o grupo também pode estar muito adiantado
             na entrega dos resultados, pois o foco está em analisar e acompanhar o progresso, e não em seguir estritamente a
-            estimativa.
-        </p>
+            estimativa.</p>
     </section>
 
     <section>
             <h2 id="margin">USER STORY</h2>
             <p>São tarefas menores extraídas do backlog que descrevem uma necessidade do usuário a partir do seu próprio ponto de
-               vista. Geralmente uma User Story segue o seguinte formato: Como [usuário], eu quero a [ação] para [benefício].
-            </p>
+               vista. Geralmente uma User Story segue o seguinte formato: Como [usuário], eu quero a [ação] para [benefício].</p>
             <div class="userstory">
               <h3>QUEM?</h3>
-                    <p id="qpo">Define quem é o usuário que tem a necessidade.<br> 
-                        “QUEM” ajuda a criar no leitor da User Story uma imagem<br>
-                        mental desse usuário.</p>
               <h3 id="h3branco">POR QUE?</h3>
-                    <p id="qpo">Define qual o benefício do usuário ao ter<br> a funcionalidade desenvolvida para atender a 
-                        essa necessidade.<br> Em outras palavras, qual o valor direto obtido.</p>
               <h3>O QUE?</h3>
-                    <p id="qpo">Define qual é a necessidade do usuário.<br> Tradicionalmente, 
-                        os requisitos do produto são representados<br> apenas por essa parte.</p>
             </div>
+            
 
             <h2 id="margin">Como fazer uma User Story?</h2>
             <img src="imagens/p.jpg" id="imguserstory" alt="User Story">
             <p>As tarefas devem ser listadas no formato descrito acima e classificadas de acordo com o nível de prioridade.
                 Também é necessário que a User Story seja acompanhada por um critério de aceitação, que define o que é necessário
-                para que a tarefa seja concluída.
-            </p>
+                para que a tarefa seja concluída.</p>
     </section>
 
     <section>
@@ -92,7 +80,7 @@
             para ser levado para teste e o DOD se um item está pronto para ser movido para a próxima etapa.</p>
     </section>
 
-    <section>
+     <section>
         <h2 id="margin">MVP</h2>
         <p>O MVP, Mínimo Produto Viável, é uma versão simplificada do produto que representa uma entrega de valor para o cliente. Ou seja,
             o MVP contém as funcionalidades necessárias para resolver o problema do cliente, porém não está completo. Como essa
@@ -101,21 +89,19 @@
             <img id="mvpimg" src="imagens/mvp.png" alt="mvp">
         <h2 id="margin">Como fazer o MVP?</h2>
         <p>Deve-se considerar a necessidade do cliente, pois mesmo que o MVP seja uma versão incompleta do produto, ele deve ter funcionalidades
-            suficientes para representar uma entrega de valor. Ou seja, elabore o produto pensando no que o cliente precisa.
-        </p>
-    </section>
-
+            suficientes para representar uma entrega de valor. Ou seja, elabore o produto pensando no que o cliente precisa.</p>
+     </section>
+    </main>
     <footer>
         <div class="anterior">
             <a href="scrum.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">ANTERIOR</a>
           </div>
         <div class="soft">
             <a href="home.html" class="home">
-              <img src="imagens/home.png" alt="Home"></img></a>
-        <div class="próximo"
-            <ul><li><a class="fontep" href="master.html">PRÓXIMO</a></li></ul>
-           </div>
-    </div>
-    </footer>
+              <img src="imagens/home.png" alt="Home"></a>
+         </div>
+         <div class="próximo">
+            <a href="master.html" class="btn" style="color:black; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">PRÓXIMO</a>
+      </div>
     </footer>
 </body>
