--- a/Páginas API/avaliações.html
+++ b/Páginas API/avaliações.html
@@ -404,8 +404,7 @@
     <script src="script.js"></script>
     <footer>
       <a href="home.html" class="home">
-        <img src="imagens/home.png" alt="Home"></img>
-    </a>
+        <img src="imagens/home.png" alt="Home"></a>
     </footer>
 </body>
         
