--- a/Páginas API/intro.html
+++ b/Páginas API/intro.html
@@ -47,22 +47,16 @@
             de entendimento sobre a metodologia ágil e quais os pontos de<br>
             melhoria. </p>
             <img src="imagens/livroabertointro.png" id="livrointro">
-
+        </div>
     </section>
-
-    <section>
-
-        <h2></h2>
-    </section>
-
     <footer>
         <div class="soft">
-            <a href="home.html" class="home">
-              <img src="imagens/home.png" style="margin-top: -10%;" alt="Home"></img>
-          </a>
+            <a href="home.html" style="margin-top: -2%;" class="home">
+              <img src="imagens/home.png" style="margin-top: -10%;" alt="Home"></a>
         </div>
         <div class="próximo">
-            <a class="fontep" href="scrum.html">PRÓXIMO</a>
-         </div>
+            <a href="scrum.html" class="btn" style="color:black; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">PRÓXIMO</a>
+      </div>
 </footer>
+</body>
    
