--- a/Páginas API/master.html
+++ b/Páginas API/master.html
@@ -55,7 +55,7 @@
         </section>
 
             <div class="resumo">
-              <h3 id="resumo">FACILITADOR DO PROCESSO</h3>
+              <h3 id="resumo">FACILITA O PROCESSO</h3>
               <h3 id="resumo">PONTO DE CONTATO ENTRE EQUIPES</h3>
               <h3 id="resumo">PROMOTOR DE MELHORIA CONTÍNUA</h3>
            </div>
@@ -67,11 +67,11 @@
               </div>
             <div class="soft">
                 <a href="home.html" class="home">
-                  <img src="imagens/home.png" alt="Home"></img></a>
-                  <div class="próximo"
-                  <ul><li><a class="fontep" href="po.html">PRÓXIMO</a></li></ul>
-            </div>
-        </div>
+                  <img src="imagens/home.png" alt="Home"></a>
+             </div>
+             <div class="próximo">
+                <a href="po.html" class="btn" style="color:black; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">PRÓXIMO</a>
+          </div>
         </footer>
 </body>
 
