--- a/Páginas API/po.html
+++ b/Páginas API/po.html
@@ -41,8 +41,7 @@
         <ol>
             <li>Capacidade analítica: O P.O deve saber analisar os dados e métricas do produto para tomar decisões coerentes.</li>
             <li>Colaboração: O P.O precisa saber facilitar as discussões com a equipe para que juntos possam chegar a uma solução
-                que atenda a necessidade do cliente. Portanto, ele deve unificar as visões, promovendo a coesão do time.
-            </li>
+                que atenda a necessidade do cliente. Portanto, ele deve unificar as visões, promovendo a coesão do time.</li>
             <li>Negociação: Ele precisa ser capaz de ouvir as necessidades, negociar expectativas e explicar as decisões de 
                 priorização de forma convincente.</li>
         </ol>
@@ -62,10 +61,10 @@
           </div>
         <div class="soft">
             <a href="home.html" class="home">
-              <img src="imagens/home.png" alt="Home"></img></a>
-        <div class="próximo"
-            <ul><li><a class="fontep" href="softskills.html">PRÓXIMO</a></li></ul>
+              <img src="imagens/home.png" alt="Home"></a>
         </div>
-    </div>
+        <div class="próximo">
+            <a href="softskills.html" class="btn" style="color:black; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">PRÓXIMO</a>
+      </div>
     </footer>
 </body>
