--- a/Páginas API/softskills.html
+++ b/Páginas API/softskills.html
@@ -45,10 +45,10 @@
         </div>
          <div class="soft">
            <a href="home.html" class="home">
-             <img src="imagens/home.png" alt="Home"></img>
-         </a>
-            <div class="avaliação">
+             <img src="imagens/home.png" style="margin-bottom: -10%;" alt="Home"></a>
+            </div>
+            <div class="avaliação" style="margin-left: 1%;">
                 <a href="avaliações.html" class="btn" style="color:black; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">REALIZAR AVALIAÇÃO</a>
             </div>
-        </div>
+    </footer>
 </body>
