--- a/Páginas API/scrum.html
+++ b/Páginas API/scrum.html
@@ -13,7 +13,7 @@
     <header>
         <h1>SCRUM</h1>
     </header>
-
+   <main>
     <section>
         <h2 id="margin" >O QUE É O MÉTODO SCRUM?</h2>
         <img src="./imagens/imgscrum.png" id="imgscrum" alt="timescrum">
@@ -25,33 +25,25 @@
             Alguns princípios do scrum fundamentais para que o projeto possa ter sucesso são:
             <ol>
                 <li>Transparência: É importante que todos os membros da equipe tenham consciência dos desafios
-                    que cada um pode estar enfrentando, evitando falhas na comunicação e troca de informações.
-                </li>
+                    que cada um pode estar enfrentando, evitando falhas na comunicação e troca de informações.</li>
                 <li>Reflexão: O método permite que os membros da equipe analisem seu próprio progresso e
                     reflitam sobre os possíveis pontos de melhoria, para que o planejamento futuro possa ser
-                    feito com base nessa análise.
-                </li>
+                    feito com base nessa análise.</li>
                 <li>Adaptação: As prioridades e a ordem de conclusão das tarefas podem ser alteradas a todo
-                    momento conforme a necessidade do cliente.
-                </li>
+                    momento conforme a necessidade do cliente.</li>
             </ol>
             <p>O scrum também possui alguns valores, sendo eles:</p>
             <ol>
                 <li>Compromisso: Os membros da equipe devem estar comprometidos em concluir as tarefas com
-                    êxito e buscar encontrar a melhor solução.
-                </li>
+                    êxito e buscar encontrar a melhor solução.</li>
                 <li>Coragem: As discussões da equipe devem ser honestas e transparentes para encontrar a melhor
-                    solução.
-                </li>
+                    solução.</li>
                 <li>Abertura: Os integrantes da equipe devem estar dispostos a aceitar novas ideias e oportunidades que
-                    possam corroborar o projeto.
-                </li>
+                    possam corroborar o projeto.</li>
                 <li>Foco: Cada membro deverá ter foco em cumprir a tarefa selecionada do product backlog, otimizando
-                    o tempo para que a entrega de resultado ocorra no prazo determinado.
-                </li>
+                    o tempo para que a entrega de resultado ocorra no prazo determinado.</li>
                 <li>Respeito: Os integrantes da equipe devem manter um ambiente de respeito e colaboração, garantindo um bom
-                    trabalho em equipe.
-                </li>
+                    trabalho em equipe.</li>
             </ol>
         </p>
     </section>
@@ -71,28 +63,27 @@
             cria versões do produto que são continuamente modificadas e complementadas até a sua
             conclusão. Os processos que discutem a elaboração do produto são:
         </p>
-
-        <ol>
+         <ol>
             <li>Sprint Planning: Envolve o planejamento de tudo aquilo que será desenvolvido durante a sprint. </li>
             <li>Sprint: É o período destinado para concluir um incremento (Tarefas do backlog realizadas durante
-                aquela sprint).
-            </li>
+                aquela sprint).</li>
             <li>Daily Scrum: Reuniões diárias para discutir o andamento do processo. </li>
             <li>Sprint Review: É uma reunião feita com o objetivo de refletir os pontos de melhoria da equipe e
                 avaliar o desempenho do time. </li>
         </ol>
     </section>
+</main>
     <footer>
     <div class="anterior">
         <a href="intro.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">ANTERIOR</a>
     </div>
     <div class="soft">
         <a href="home.html" class="home">
-            <img src="imagens/home.png" alt="Home"></img></a>
-            <div class="próximo"
-            <ul><li><a class="fontep" href="artefatos.html">PRÓXIMO</a></li></ul>
-    </div>
-</div>
+            <img src="imagens/home.png" alt="Home"></a>
+        </div>
+        <div class="próximo">
+            <a href="artefatos.html" class="btn" style="color:black; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">PRÓXIMO</a>
+      </div>
 </footer>
 </body>
 
