--- a/Páginas API/home.html
+++ b/Páginas API/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,70 +8,85 @@
     <link rel="stylesheet" href="home.css">
     <link rel="shortcut icon" href="../Logo Spaceline.jpg" type="image/x-icon">
 </head>
+
 <body>
     <header>
-    <nav>
-        <ul>
-            <li>
-                <a href="intro.html">Introdução</a>
-            </li>
-            <li>
-                <a href="scrum.html">Scrum</a>
-            </li>
-            <li>
-                <a href="artefatos.html">Artefatos</a>
-            </li>
-            <li>
-                <a href="master.html">Scrum Master</a>
-            </li>
-            <li>
-                <a href="po.html">Product Owner</a>
-            </li>
-            <li>
-                <a href="softskills.html">Soft Skills</a>
-            </li>
-            <li>
-                <a href="avaliações.html">Avaliações</a>
-            </li>
-        </ul>
-    </nav>
-</header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="intro.html">Introdução</a>
+                </li>
+                <li>
+                    <a href="scrum.html">Scrum</a>
+                </li>
+                <li>
+                    <a href="artefatos.html">Artefatos</a>
+                </li>
+                <li>
+                    <a href="master.html">Scrum Master</a>
+                </li>
+                <li>
+                    <a href="po.html">Product Owner</a>
+                </li>
+                <li>
+                    <a href="softskills.html">Soft Skills</a>
+                </li>
+                <li>
+                    <a href="avaliações.html">Avaliações</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <h1>APRENDA O MÉTODO SCRUM</h1>
         <h2>com a Spaceline</h2>
         <input type="text">
         <h3>Não sabe por onde começar?</h3>
-        <ul><li><a href="intro.html">clique aqui</a></li></ul>
+        <ul>
+            <li><a href="intro.html">clique aqui</a></li>
+        </ul>
     </main>
     <section>
         <h1>Scrum</h1>
         <h4>Introdução ao método ágil e seus principais conceitos, bem como sua forma
             de aplicação</h4>
-        <ul><li><a href="scrum.html">Aprender</a></li></ul>
+        <ul>
+            <li><a href="scrum.html">Aprender</a></li>
+        </ul>
         <h1>Artefatos</h1>
         <h4>Artefatos e ferramentas necessários para a aplicação do método ágil</h4>
-        <ul><li><a href="artefatos.html">Aprender</a></li></ul>
+        <ul>
+            <li><a href="artefatos.html">Aprender</a></li>
+        </ul>
         <h1>Scrum Master</h1>
         <h4>O papel do líder da equipe, responsável pelo gerenciamento
             das tarefas e das atividades</h4>
-        <ul><li><a href="master.html">Aprender</a></li></ul>
+        <ul>
+            <li><a href="master.html">Aprender</a></li>
+        </ul>
         <h1>Product Owner</h1>
         <h4>O papel de representante dos interesses das partes envolvidas no projeto</h4>
-        <ul><li><a href="po.html">Aprender</a></li></ul>
+        <ul>
+            <li><a href="po.html">Aprender</a></li>
+        </ul>
         <h1>Soft Skills</h1>
         <h4>Habilidades interpessoais essenciais para um profissional de T.I.</h4>
-        <ul><li><a href="softskills.html">Aprender</a></li></ul>
+        <ul>
+            <li><a href="softskills.html">Aprender</a></li>
+        </ul>
         <h1>Avaliações</h1>
-        <h4>O papel de representar as perguntas das equipes, conversando 
+        <h4>O papel de representar as perguntas das equipes, conversando
             com os clientes para entender seus requisitos</h4>
-        <ul><li><a href="avaliações.html">Aprender</a></li></ul>
+        <ul>
+            <li><a href="avaliações.html">Aprender</a></li>
+        </ul>
     </section>
 
     <footer>
-            <h3>O conteúdo do site foi feito com base nas seguintes referências:</h3><br>
-            <a href="https://aws.amazon.com/pt/what-is/scrum/">Amazon AWS: O que é scrum?</a><br>
-            <a href="https://scrumguides.org/index.html">Scrumguides: O que é scrum?</a><br>
-            <a href="https://rockcontent.com/br/blog/scrum/">Rockcontent: Aplicação do scrum</a>
+        <h3>O conteúdo do site foi feito com base nas seguintes referências:</h3><br>
+        <a href="https://aws.amazon.com/pt/what-is/scrum/">Amazon AWS: O que é scrum?</a><br>
+        <a href="https://scrumguides.org/index.html">Scrumguides: O que é scrum?</a><br>
+        <a href="https://rockcontent.com/br/blog/scrum/">Rockcontent: Aplicação do scrum</a>
     </footer>
 
 </body>
