--- a/Páginas API/scrum.html
+++ b/Páginas API/scrum.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,53 +16,55 @@
     </header>
 
     <section>
-        <h2 id="margin" >O QUE É O MÉTODO SCRUM?</h2>
+        <h2 id="margin">O QUE É O MÉTODO SCRUM?</h2>
         <img src="./imagens/imgscrum.png" id="imgscrum" alt="timescrum">
-        <p>O método scrum é um modelo de gestão ágil amplamente utilizado não apenas no desenvolvimento de software, 
+        <p>O método scrum é um modelo de gestão ágil amplamente utilizado não apenas no desenvolvimento de software,
             mas também em outras áreas onde a adaptabilidade é necessária. Ele abrange um conjunto de ferramentas,
             reuiões e funções que garantem um desenvolvimento eficiente para o projeto. O scrum
-            também usa ciclos curtos de desenvolvimento chamados sprints, permitindo-os melhorar o produto com base 
+            também usa ciclos curtos de desenvolvimento chamados sprints, permitindo-os melhorar o produto com base
             em um feedback contínuo.<br><br>
             Alguns princípios do scrum fundamentais para que o projeto possa ter sucesso são:
-            <ol>
-                <li>Transparência: É importante que todos os membros da equipe tenham consciência dos desafios
-                    que cada um pode estar enfrentando, evitando falhas na comunicação e troca de informações.
-                </li>
-                <li>Reflexão: O método permite que os membros da equipe analisem seu próprio progresso e
-                    reflitam sobre os possíveis pontos de melhoria, para que o planejamento futuro possa ser
-                    feito com base nessa análise.
-                </li>
-                <li>Adaptação: As prioridades e a ordem de conclusão das tarefas podem ser alteradas a todo
-                    momento conforme a necessidade do cliente.
-                </li>
-            </ol>
-            <p>O scrum também possui alguns valores, sendo eles:</p>
-            <ol>
-                <li>Compromisso: Os membros da equipe devem estar comprometidos em concluir as tarefas com
-                    êxito e buscar encontrar a melhor solução.
-                </li>
-                <li>Coragem: As discussões da equipe devem ser honestas e transparentes para encontrar a melhor
-                    solução.
-                </li>
-                <li>Abertura: Os integrantes da equipe devem estar dispostos a aceitar novas ideias e oportunidades que
-                    possam corroborar o projeto.
-                </li>
-                <li>Foco: Cada membro deverá ter foco em cumprir a tarefa selecionada do product backlog, otimizando
-                    o tempo para que a entrega de resultado ocorra no prazo determinado.
-                </li>
-                <li>Respeito: Os integrantes da equipe devem manter um ambiente de respeito e colaboração, garantindo um bom
-                    trabalho em equipe.
-                </li>
-            </ol>
+        <ol>
+            <li>Transparência: É importante que todos os membros da equipe tenham consciência dos desafios
+                que cada um pode estar enfrentando, evitando falhas na comunicação e troca de informações.
+            </li>
+            <li>Reflexão: O método permite que os membros da equipe analisem seu próprio progresso e
+                reflitam sobre os possíveis pontos de melhoria, para que o planejamento futuro possa ser
+                feito com base nessa análise.
+            </li>
+            <li>Adaptação: As prioridades e a ordem de conclusão das tarefas podem ser alteradas a todo
+                momento conforme a necessidade do cliente.
+            </li>
+        </ol>
+        <p>O scrum também possui alguns valores, sendo eles:</p>
+        <ol>
+            <li>Compromisso: Os membros da equipe devem estar comprometidos em concluir as tarefas com
+                êxito e buscar encontrar a melhor solução.
+            </li>
+            <li>Coragem: As discussões da equipe devem ser honestas e transparentes para encontrar a melhor
+                solução.
+            </li>
+            <li>Abertura: Os integrantes da equipe devem estar dispostos a aceitar novas ideias e oportunidades que
+                possam corroborar o projeto.
+            </li>
+            <li>Foco: Cada membro deverá ter foco em cumprir a tarefa selecionada do product backlog, otimizando
+                o tempo para que a entrega de resultado ocorra no prazo determinado.
+            </li>
+            <li>Respeito: Os integrantes da equipe devem manter um ambiente de respeito e colaboração, garantindo um bom
+                trabalho em equipe.
+            </li>
+        </ol>
         </p>
     </section>
 
     <section>
-        <h2 id="margin" >QUAIS OS BENEFÍCIOS DE USAR O SCRUM?</h2>
+        <h2 id="margin">QUAIS OS BENEFÍCIOS DE USAR O SCRUM?</h2>
         <img src="./imagens/teamscrum.png" id="timescrum" alt="timescrum">
-        <p>O scrum se destaca em relação a outras metodologias pela praticidade e eficiência, uma vez que permite que as 
-            equipes executem mudanças no projeto com mais rapidez. Os processos que envolvem a verificação do produto 
-            permitem obter um retorno com base na visão do cliente, garantindo a qualidade mesmo em meio a imprevistos. Além disso, como as equipes são autogerenciáveis, os membros tem uma maior flexibilidade para realizar mudanças
+        <p>O scrum se destaca em relação a outras metodologias pela praticidade e eficiência, uma vez que permite que as
+            equipes executem mudanças no projeto com mais rapidez. Os processos que envolvem a verificação do produto
+            permitem obter um retorno com base na visão do cliente, garantindo a qualidade mesmo em meio a imprevistos.
+            Além disso, como as equipes são autogerenciáveis, os membros tem uma maior flexibilidade para realizar
+            mudanças
             no produto conforme seu próprio estilo de trabalho.</p>
     </section>
     <section>
@@ -83,17 +86,17 @@
         </ol>
     </section>
     <footer>
-    <div class="anterior">
-        <a href="intro.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">ANTERIOR</a>
-    </div>
-    <div class="soft">
-        <a href="home.html" class="home">
-            <img src="imagens/home.png" alt="Home"></img></a>
-            <div class="próximo"
-            <ul><li><a class="fontep" href="artefatos.html">PRÓXIMO</a></li></ul>
-    </div>
-</div>
-</footer>
+        <div class="anterior">
+            <a href="intro.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;" role="button"
+                data-bs-toggle="button">ANTERIOR</a>
+        </div>
+        <div class="soft">
+            <a href="home.html" class="home">
+                <img src="imagens/home.png" alt="Home"></img></a>
+            <div class="próximo" <ul>
+                <li><a class="fontep" href="artefatos.html">PRÓXIMO</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
-
-        
