--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,99 +24,118 @@
     </section>
 
     <section>
-            <h2 id="margin">BACKLOG DO PRODUTO</h2>
-            <img src="imagens/backlog.jpg" id="imgartefatos" alt="Backlog">
-        <p> O Backlog é uma lista de todos os requisitos, melhorias e correções do produto, ou seja, tudo aquilo que 
+        <h2 id="margin">BACKLOG DO PRODUTO</h2>
+        <img src="imagens/backlog.jpg" id="imgartefatos" alt="Backlog">
+        <p> O Backlog é uma lista de todos os requisitos, melhorias e correções do produto, ou seja, tudo aquilo que
             deve ser desenvolvido pela equipe. Esse documento está em constante alteração, passando por redefinições
-            de prioridade conforme necessário. O Product Owner é o responsável por criar e alterar essa lista, satisfazendo
+            de prioridade conforme necessário. O Product Owner é o responsável por criar e alterar essa lista,
+            satisfazendo
             as necessidades do cliente.
         </p>
         <h2>Como montar o Backlog?</h2>
-        <p style="margin-top: -3%;"> O Product Owner deve conversar com o cliente e fazer um levantamento de todos os requisitos. Após entender a
+        <p style="margin-top: -3%;"> O Product Owner deve conversar com o cliente e fazer um levantamento de todos os
+            requisitos. Após entender a
             visão do produto, as Epics, funcionalidades de maior nível, devem ser identificadas e priorizadas em relação
-            as demais tarefas. Depois, essas Epics devem ser divididas em User Story (você entenderá melhor esse conceito
+            as demais tarefas. Depois, essas Epics devem ser divididas em User Story (você entenderá melhor esse
+            conceito
             mais abaixo) e as tarefas devem ser divididas por de prioridade. Por fim, é essencial fazer uma estimativa
-            para cada item do backlog, conforme o nível de dificuldade. 
+            para cada item do backlog, conforme o nível de dificuldade.
         </p>
     </section>
 
     <section>
-            <h2 id="margin">BURNDOWN</h2>
-          <p>O Burndown é um gráfico que representa a relação entre a estimativa para o 
+        <h2 id="margin">BURNDOWN</h2>
+        <p>O Burndown é um gráfico que representa a relação entre a estimativa para o
             período de conclusão das atividades e o período real de conclusão. Esse artefato permite que o
-            grupo tenha uma visão clara sobre o progresso das atividades e as possíveis dificuldades enfrentadas em relação
+            grupo tenha uma visão clara sobre o progresso das atividades e as possíveis dificuldades enfrentadas em
+            relação
             ao tempo de finalização.</p>
-            <img src="imagens/burndown.png" id="burndown" alt="burndown">
-            <h2 id="margin">Como criar um Burndown?</h2>
-            <p> Para criar um gráfico de Burndown o Scrum Master deve estimar o esforço necessário para 
+        <img src="imagens/burndown.png" id="burndown" alt="burndown">
+        <h2 id="margin">Como criar um Burndown?</h2>
+        <p> Para criar um gráfico de Burndown o Scrum Master deve estimar o esforço necessário para
             concluir cada tarefa da sprint, determinando um limite de tempo. É natural que a diferença entre a linha
-            que representa o trabalho real seja diferente da estimativa, afinal, podem existir muitos imprevistos ao longo
-            do desenvolvimento que atrasem a conclusão das atribuições. Da mesma forma, o grupo também pode estar muito adiantado
-            na entrega dos resultados, pois o foco está em analisar e acompanhar o progresso, e não em seguir estritamente a
+            que representa o trabalho real seja diferente da estimativa, afinal, podem existir muitos imprevistos ao
+            longo
+            do desenvolvimento que atrasem a conclusão das atribuições. Da mesma forma, o grupo também pode estar muito
+            adiantado
+            na entrega dos resultados, pois o foco está em analisar e acompanhar o progresso, e não em seguir
+            estritamente a
             estimativa.
         </p>
     </section>
 
     <section>
-            <h2 id="margin">USER STORY</h2>
-            <p>São tarefas menores extraídas do backlog que descrevem uma necessidade do usuário a partir do seu próprio ponto de
-               vista. Geralmente uma User Story segue o seguinte formato: Como [usuário], eu quero a [ação] para [benefício].
-            </p>
-            <div class="userstory">
-              <h3>QUEM?</h3>
-                    <p id="qpo">Define quem é o usuário que tem a necessidade.<br> 
-                        “QUEM” ajuda a criar no leitor da User Story uma imagem<br>
-                        mental desse usuário.</p>
-              <h3 id="h3branco">POR QUE?</h3>
-                    <p id="qpo">Define qual o benefício do usuário ao ter<br> a funcionalidade desenvolvida para atender a 
-                        essa necessidade.<br> Em outras palavras, qual o valor direto obtido.</p>
-              <h3>O QUE?</h3>
-                    <p id="qpo">Define qual é a necessidade do usuário.<br> Tradicionalmente, 
-                        os requisitos do produto são representados<br> apenas por essa parte.</p>
-            </div>
+        <h2 id="margin">USER STORY</h2>
+        <p>São tarefas menores extraídas do backlog que descrevem uma necessidade do usuário a partir do seu próprio
+            ponto de
+            vista. Geralmente uma User Story segue o seguinte formato: Como [usuário], eu quero a [ação] para
+            [benefício].
+        </p>
+        <div class="userstory">
+            <h3>QUEM?</h3>
+            <p id="qpo">Define quem é o usuário que tem a necessidade.<br>
+                “QUEM” ajuda a criar no leitor da User Story uma imagem<br>
+                mental desse usuário.</p>
+            <h3 id="h3branco">POR QUE?</h3>
+            <p id="qpo">Define qual o benefício do usuário ao ter<br> a funcionalidade desenvolvida para atender a
+                essa necessidade.<br> Em outras palavras, qual o valor direto obtido.</p>
+            <h3>O QUE?</h3>
+            <p id="qpo">Define qual é a necessidade do usuário.<br> Tradicionalmente,
+                os requisitos do produto são representados<br> apenas por essa parte.</p>
+        </div>
 
-            <h2 id="margin">Como fazer uma User Story?</h2>
-            <img src="imagens/p.jpg" id="imguserstory" alt="User Story">
-            <p>As tarefas devem ser listadas no formato descrito acima e classificadas de acordo com o nível de prioridade.
-                Também é necessário que a User Story seja acompanhada por um critério de aceitação, que define o que é necessário
-                para que a tarefa seja concluída.
-            </p>
+        <h2 id="margin">Como fazer uma User Story?</h2>
+        <p>As tarefas devem ser listadas no formato descrito acima e classificadas de acordo com o nível de prioridade.
+            Também é necessário que a User Story seja acompanhada por um critério de aceitação, que define o que é
+            necessário
+            para que a tarefa seja concluída.
+        </p>
     </section>
 
     <section>
-        <h2 id="margin" style="margin-top: 15%;">DOR E DOD</h2>
+        <h2 id="margin">DOR E DOD</h2>
         <img src="imagens/dor.png" id="imgdor" alt="DOR">
-        <img src="imagens/dod2.jpg" id="imgdod"  alt="DOD">
-        <p>DOR, Definition of Ready, são os critérios que detalham o que uma user story precisa conter para que possa ser executada
-            pelo time. Enquanto DOD, Definition of Done, é a definição daquilo que foi feito. Ambas as ferramentas são importantes para
-            trazer tranparência ao processo de desenvolvimento, sendo critérios de entrada e saída, o DOR verificando se o item está pronto
+        <img src="imagens/dod2.jpg" id="imgdod" alt="DOD">
+        <p>DOR, Definition of Ready, são os critérios que detalham o que uma user story precisa conter para que possa
+            ser executada
+            pelo time. Enquanto DOD, Definition of Done, é a definição daquilo que foi feito. Ambas as ferramentas são
+            importantes para
+            trazer tranparência ao processo de desenvolvimento, sendo critérios de entrada e saída, o DOR verificando se
+            o item está pronto
             para ser levado para teste e o DOD se um item está pronto para ser movido para a próxima etapa.</p>
     </section>
 
     <section>
         <h2 id="margin">MVP</h2>
-        <p>O MVP, Mínimo Produto Viável, é uma versão simplificada do produto que representa uma entrega de valor para o cliente. Ou seja,
-            o MVP contém as funcionalidades necessárias para resolver o problema do cliente, porém não está completo. Como essa
-            ferramenta é rapidamente lançada no mercado, os desenvolvedores possuem a vantagem de obter um feedback do produto e validar
+        <p>O MVP, Mínimo Produto Viável, é uma versão simplificada do produto que representa uma entrega de valor para o
+            cliente. Ou seja,
+            o MVP contém as funcionalidades necessárias para resolver o problema do cliente, porém não está completo.
+            Como essa
+            ferramenta é rapidamente lançada no mercado, os desenvolvedores possuem a vantagem de obter um feedback do
+            produto e validar
             o investimento.</p>
-            <img id="mvpimg" src="imagens/mvp.png" alt="mvp">
+        <img id="mvpimg" src="imagens/mvp.png" alt="mvp">
         <h2 id="margin">Como fazer o MVP?</h2>
-        <p>Deve-se considerar a necessidade do cliente, pois mesmo que o MVP seja uma versão incompleta do produto, ele deve ter funcionalidades
-            suficientes para representar uma entrega de valor. Ou seja, elabore o produto pensando no que o cliente precisa.
+        <p>Deve-se considerar a necessidade do cliente, pois mesmo que o MVP seja uma versão incompleta do produto, ele
+            deve ter funcionalidades
+            suficientes para representar uma entrega de valor. Ou seja, elabore o produto pensando no que o cliente
+            precisa.
         </p>
     </section>
 
     <footer>
         <div class="anterior">
-            <a href="scrum.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">ANTERIOR</a>
-          </div>
+            <a href="scrum.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;" role="button"
+                data-bs-toggle="button">ANTERIOR</a>
+        </div>
         <div class="soft">
             <a href="home.html" class="home">
-              <img src="imagens/home.png" alt="Home"></img></a>
-        <div class="próximo"
-            <ul><li><a class="fontep" href="master.html">PRÓXIMO</a></li></ul>
-           </div>
-    </div>
+                <img src="imagens/home.png" alt="Home"></img></a>
+            <div class="próximo" <ul>
+                <li><a class="fontep" href="master.html">PRÓXIMO</a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
     </footer>
 </body>
