--- a/Páginas API/intro.html
+++ b/Páginas API/intro.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="../Logo Spaceline.jpg" type="image/x-icon">
 </head>
+
 <body>
 
     <header>
@@ -15,12 +17,15 @@
     <section>
 
         <h2>O QUE É A METODOLOGIA ÁGIL?</h2>
-           <img src="imagens/introimg.png" id="introimg">
-           <p>A metodologia ágil é uma forma de gerenciamento de projetos que permite um desenvolvimento
+        <img src="imagens/introimg.png" id="introimg">
+        <p>A metodologia ágil é uma forma de gerenciamento de projetos que permite um desenvolvimento
             mais flexível e adaptado. Como o próprio nome sugere, seu principal objetivo é
-            aumentar a agilidade do processo, permitindo uma maior adaptabilidade do produto.  Assim, a elaboração do projeto é feita em ciclos curtos chamados de iterações, que possibilitam um feedback
+            aumentar a agilidade do processo, permitindo uma maior adaptabilidade do produto. Assim, a elaboração do
+            projeto é
+            feita em ciclos
+            curtos chamados de iterações, que possibilitam um feedback
             contínuo e uma melhoria na qualidade e conformidade das entregas.
-            <p>Nas próximas páginas você entenderá mais detalhadamente 
+            Nas próximas páginas você entenderá mais detalhadamente
             sobre cada um desses conceitos.</p>
     </section>
 
@@ -28,25 +33,24 @@
 
         <h2 id="margin">O QUE VOCÊ ENCONTRARÁ NESSE SITE?</h2>
         <p>Bem-vindo ao nosso site! O spaceline foi desenvolvido com o objetivo de ensinar a metodologia
-           ágil de forma didática, proporcionando a todos os interessados um<br>
-           conhecimento abrangente sobre o método scrum e sua aplicação prática no ambiente de trabalho.<br> 
-           Além de uma sólida base teorica, cada página oferece tabelas interativas que permitem<br>
-           simular processos, montar ferramentas e identificar suas soft skills.
-           O conteúdo é dividido em 5 partes:</p>
+            ágil de forma didática, proporcionando a todos os interessados um<br>
+            conhecimento abrangente sobre o método scrum e sua aplicação prática no ambiente de trabalho.<br>
+            Além de uma sólida base teorica, cada página oferece tabelas interativas que permitem<br>
+            simular processos, montar ferramentas e identificar suas soft skills.
+            O conteúdo é dividido em 5 partes:</p>
 
 
         <div class="introduçao">
-        <ol>
-            <li>Método Scrum: Uma explicação detalhada sobre a metodologia e todos os processos envolvidos.</li>
-            <li>Ferramentas: Conjunto de artefatos necessários para o gerenciamento e documentação do projeto.</li>
-            <li>Scrum Master: O líder da equipe.</li>
-            <li>Product Owner: O representante da equipe.</li>
-            <li>Soft skills: Habilidades necessárias para um profissional de T.I. no mercado de trabalho.</li>
-        </ol>
-        <p> Ao final de cada aula, disponibilizamos um teste de compreensão, no qual você poderá avaliar o seu nível
-            de entendimento sobre a metodologia ágil e quais os pontos de<br>
-            melhoria. </p>
-            <img src="imagens/livroabertointro.png" id="livrointro">
+            <ol>
+                <li>Método Scrum: Uma explicação detalhada sobre a metodologia e todos os processos envolvidos.</li>
+                <li>Ferramentas: Conjunto de artefatos necessários para o gerenciamento e documentação do projeto.</li>
+                <li>Scrum Master: O líder da equipe.</li>
+                <li>Product Owner: O representante da equipe.</li>
+                <li>Soft skills: Habilidades necessárias para um profissional de T.I. no mercado de trabalho.</li>
+            </ol>
+            <p> Ao final de cada aula, disponibilizamos um teste de compreensão, no qual você poderá avaliar o seu nível
+                de entendimento sobre a metodologia ágil e quais os pontos de<br>
+                melhoria. </p>
 
     </section>
 
@@ -58,11 +62,10 @@
     <footer>
         <div class="soft">
             <a href="home.html" class="home">
-              <img src="imagens/home.png" style="margin-top: -10%;" alt="Home"></img>
-          </a>
+                <img src="imagens/home.png" style="margin-top: -10%;" alt="Home"></img>
+            </a>
         </div>
         <div class="próximo">
             <a class="fontep" href="scrum.html">PRÓXIMO</a>
-         </div>
-</footer>
-   
+        </div>
+    </footer>
