--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -14,12 +14,13 @@
     <header>
         <h1>ARTEFATOS</h1>
     </header>
-    <main>
-      <section>
+
+    <section>
         <h2 id="margin">O QUE SÃO?</h2>
         <p>Os artefatos são ferramentas de gerenciamento utilizadas no scrum que além de auxiliarem no
             planejamento também fornecem informações importantes para a equipe e os demais interessados no projeto.
-            A seguir, você verá mais detalhadamente sobre cada ferramenta e sua elaboração.</p>
+            A seguir, você verá mais detalhadamente sobre cada ferramenta e sua elaboração.
+        </p>
     </section>
 
     <section>
@@ -27,15 +28,10 @@
         <img src="imagens/backlog.jpg" id="imgartefatos" alt="Backlog">
         <p> O Backlog é uma lista de todos os requisitos, melhorias e correções do produto, ou seja, tudo aquilo que
             deve ser desenvolvido pela equipe. Esse documento está em constante alteração, passando por redefinições
-<<<<<<< HEAD
             de prioridade conforme necessário. O Product Owner é o responsável por criar e alterar essa lista,
             satisfazendo
             as necessidades do cliente.
         </p>
-=======
-            de prioridade conforme necessário. O Product Owner é o responsável por criar e alterar essa lista, satisfazendo
-            as necessidades do cliente.</p>
->>>>>>> 5cd2761b167bad143f3746ffabafc1098153cfc6
         <h2>Como montar o Backlog?</h2>
         <p style="margin-top: -3%;"> O Product Owner deve conversar com o cliente e fazer um levantamento de todos os
             requisitos. Após entender a
@@ -43,12 +39,8 @@
             as demais tarefas. Depois, essas Epics devem ser divididas em User Story (você entenderá melhor esse
             conceito
             mais abaixo) e as tarefas devem ser divididas por de prioridade. Por fim, é essencial fazer uma estimativa
-<<<<<<< HEAD
             para cada item do backlog, conforme o nível de dificuldade.
         </p>
-=======
-            para cada item do backlog, conforme o nível de dificuldade.</p>
->>>>>>> 5cd2761b167bad143f3746ffabafc1098153cfc6
     </section>
 
     <section>
@@ -62,7 +54,6 @@
         <h2 id="margin">Como criar um Burndown?</h2>
         <p> Para criar um gráfico de Burndown o Scrum Master deve estimar o esforço necessário para
             concluir cada tarefa da sprint, determinando um limite de tempo. É natural que a diferença entre a linha
-<<<<<<< HEAD
             que representa o trabalho real seja diferente da estimativa, afinal, podem existir muitos imprevistos ao
             longo
             do desenvolvimento que atrasem a conclusão das atribuições. Da mesma forma, o grupo também pode estar muito
@@ -99,30 +90,6 @@
             necessário
             para que a tarefa seja concluída.
         </p>
-=======
-            que representa o trabalho real seja diferente da estimativa, afinal, podem existir muitos imprevistos ao longo
-            do desenvolvimento que atrasem a conclusão das atribuições. Da mesma forma, o grupo também pode estar muito adiantado
-            na entrega dos resultados, pois o foco está em analisar e acompanhar o progresso, e não em seguir estritamente a
-            estimativa.</p>
-    </section>
-
-    <section>
-            <h2 id="margin">USER STORY</h2>
-            <p>São tarefas menores extraídas do backlog que descrevem uma necessidade do usuário a partir do seu próprio ponto de
-               vista. Geralmente uma User Story segue o seguinte formato: Como [usuário], eu quero a [ação] para [benefício].</p>
-            <div class="userstory">
-              <h3>QUEM?</h3>
-              <h3 id="h3branco">POR QUE?</h3>
-              <h3>O QUE?</h3>
-            </div>
-            
-
-            <h2 id="margin">Como fazer uma User Story?</h2>
-            <img src="imagens/p.jpg" id="imguserstory" alt="User Story">
-            <p>As tarefas devem ser listadas no formato descrito acima e classificadas de acordo com o nível de prioridade.
-                Também é necessário que a User Story seja acompanhada por um critério de aceitação, que define o que é necessário
-                para que a tarefa seja concluída.</p>
->>>>>>> 5cd2761b167bad143f3746ffabafc1098153cfc6
     </section>
 
     <section>
@@ -138,7 +105,7 @@
             para ser levado para teste e o DOD se um item está pronto para ser movido para a próxima etapa.</p>
     </section>
 
-     <section>
+    <section>
         <h2 id="margin">MVP</h2>
         <p>O MVP, Mínimo Produto Viável, é uma versão simplificada do produto que representa uma entrega de valor para o
             cliente. Ou seja,
@@ -149,7 +116,6 @@
             o investimento.</p>
         <img id="mvpimg" src="imagens/mvp.png" alt="mvp">
         <h2 id="margin">Como fazer o MVP?</h2>
-<<<<<<< HEAD
         <p>Deve-se considerar a necessidade do cliente, pois mesmo que o MVP seja uma versão incompleta do produto, ele
             deve ter funcionalidades
             suficientes para representar uma entrega de valor. Ou seja, elabore o produto pensando no que o cliente
@@ -157,12 +123,6 @@
         </p>
     </section>
 
-=======
-        <p>Deve-se considerar a necessidade do cliente, pois mesmo que o MVP seja uma versão incompleta do produto, ele deve ter funcionalidades
-            suficientes para representar uma entrega de valor. Ou seja, elabore o produto pensando no que o cliente precisa.</p>
-     </section>
-    </main>
->>>>>>> 5cd2761b167bad143f3746ffabafc1098153cfc6
     <footer>
         <div class="anterior">
             <a href="scrum.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;" role="button"
@@ -170,7 +130,6 @@
         </div>
         <div class="soft">
             <a href="home.html" class="home">
-<<<<<<< HEAD
                 <img src="imagens/home.png" alt="Home"></img></a>
             <div class="próximo" <ul>
                 <li><a class="fontep" href="master.html">PRÓXIMO</a></li>
@@ -178,12 +137,5 @@
             </div>
         </div>
     </footer>
-=======
-              <img src="imagens/home.png" alt="Home"></a>
-         </div>
-         <div class="próximo">
-            <a href="master.html" class="btn" style="color:black; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">PRÓXIMO</a>
-      </div>
->>>>>>> 5cd2761b167bad143f3746ffabafc1098153cfc6
     </footer>
 </body>
