--- a/Páginas API/master.html
+++ b/Páginas API/master.html
@@ -63,7 +63,6 @@
             </ol>
         </section>
 
-<<<<<<< HEAD
         <div class="resumo">
             <h3 id="resumo">FACILITADOR DO PROCESSO</h3>
             <h3 id="resumo">PONTO DE CONTATO ENTRE EQUIPES</h3>
@@ -86,26 +85,5 @@
         </div>
     </footer>
 </body>
-=======
-            <div class="resumo">
-              <h3 id="resumo">FACILITA O PROCESSO</h3>
-              <h3 id="resumo">PONTO DE CONTATO ENTRE EQUIPES</h3>
-              <h3 id="resumo">PROMOTOR DE MELHORIA CONTÍNUA</h3>
-           </div>
-        
-    </main>
-    <footer>
-            <div class="anterior">
-                <a href="artefatos.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">ANTERIOR</a>
-              </div>
-            <div class="soft">
-                <a href="home.html" class="home">
-                  <img src="imagens/home.png" alt="Home"></a>
-             </div>
-             <div class="próximo">
-                <a href="po.html" class="btn" style="color:black; text-decoration: none; font-size: 17px;" role="button" data-bs-toggle="button">PRÓXIMO</a>
-          </div>
-        </footer>
-</body>
-
->>>>>>> 5cd2761b167bad143f3746ffabafc1098153cfc6
+message.txt
+5 KB
