--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -5,12 +5,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="../Logo Spaceline.jpg" type="image/x-icon">
 </head>
 
 <body>
-
+    <nav>
+        <nav class="navbar">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" viewBox="0 0 16 16">
+                    <path d="M2 3h12a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1z"/> 
+                    <path d="M2 7h12a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1z"/> 
+                    <path d="M2 11h12a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-1a1 1 0 0 1 1-1z"/> 
+                </svg>
+            </button>
+            <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                <ul class="navbar-nav">
+                 <li class="nav-item">
+                  <a class="nav-link" href="intro.html">Introdução</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="scrum.html">Scrum</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="artefatos.html">Artefatos</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="master.html">Scrum Master</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="po.html">Product Owner</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="softskills.html">Soft Skills</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="avaliações.html">Avaliações</a>
+              </li></ul>
+              </div>
+            </div>
+        </nav>
     <header>
         <h1>ARTEFATOS</h1>
     </header>
@@ -125,15 +163,14 @@
 
     <footer>
         <div class="anterior">
-            <a href="scrum.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;" role="button"
+            <a href="scrum.html" class="btn" style="color:white; text-decoration: none; font-size: 17px;font-weight: 800;" role="button"
                 data-bs-toggle="button">ANTERIOR</a>
         </div>
         <div class="soft">
             <a href="home.html" class="home">
                 <img src="imagens/home.png" alt="Home"></img></a>
-            <div class="próximo" <ul>
+            <div class="próximo">
                 <li><a class="fontep" href="master.html">PRÓXIMO</a></li>
-                </ul>
             </div>
         </div>
     </footer>
