barra de pesquisa

--- a/Páginas API/home.html
+++ b/Páginas API/home.html
@@ -40,7 +40,8 @@
     <main>
         <h1>APRENDA O MÉTODO SCRUM</h1>
         <h2>com a Spaceline</h2>
-        <input type="text">
+        <input type="text" id="searchInput" placeholder="Pesquisar..." oninput="searchSite()">
+        <div id="results"></div>
         <h3>Não sabe por onde começar?</h3>
         <ul>
             <li><a href="intro.html">clique aqui</a></li>
@@ -91,5 +92,5 @@
         <a href="https://rockcontent.com/br/blog/scrum/">Rockcontent: Aplicação do scrum</a><br>
         <a href="https://www.flaticon.com/uicons">Flaticon: Icons</a>
     </footer>
-
+    <script src="search.js"></script>
 </body>
