--- a/Páginas API/artefatos.html
+++ b/Páginas API/artefatos.html
@@ -60,9 +60,11 @@
             A seguir, você verá mais detalhadamente sobre cada ferramenta e sua elaboração.
         </p>
     </section>
+    <br>
+    <br>
 
     <section>
-        <h2 id="margin">BACKLOG DO PRODUTO</h2>
+        <h2 id="margin3">BACKLOG DO PRODUTO</h2>
         <img src="imagens/backlog.jpg" id="imgartefatos" alt="Backlog">
         <p> O Backlog é uma lista de todos os requisitos, melhorias e correções do produto, ou seja, tudo aquilo que
             deve ser desenvolvido pela equipe. Esse documento está em constante alteração, passando por redefinições
@@ -80,9 +82,11 @@
             para cada item do backlog, conforme o nível de dificuldade.
         </p>
     </section>
+    <br>
+    <br>
 
     <section>
-        <h2 id="margin">BURNDOWN</h2>
+        <h2 id="margin4">BURNDOWN</h2>
         <p>O Burndown é um gráfico que representa a relação entre a estimativa para o
             período de conclusão das atividades e o período real de conclusão. Esse artefato permite que o
             grupo tenha uma visão clara sobre o progresso das atividades e as possíveis dificuldades enfrentadas em
@@ -101,9 +105,11 @@
             estimativa.
         </p>
     </section>
+    <br>
+    <br>
 
     <section>
-        <h2 id="margin">USER STORY</h2>
+        <h2 id="margin5">USER STORY</h2>
         <p>São tarefas menores extraídas do backlog que descrevem uma necessidade do usuário a partir do seu próprio
             ponto de
             vista. Geralmente uma User Story segue o seguinte formato: Como [usuário], eu quero a [ação] para
@@ -129,9 +135,11 @@
             para que a tarefa seja concluída.
         </p>
     </section>
+    <br>
+    <br>
 
     <section>
-        <h2 id="margin">DOR E DOD</h2>
+        <h2 id="margin6">DOR E DOD</h2>
         <img src="imagens/dor.png" id="imgdor" alt="DOR">
         <img src="imagens/dod2.jpg" id="imgdod" alt="DOD">
         <p>DOR, Definition of Ready, são os critérios que detalham o que uma user story precisa conter para que possa
@@ -142,9 +150,11 @@
             o item está pronto
             para ser levado para teste e o DOD se um item está pronto para ser movido para a próxima etapa.</p>
     </section>
+    <br>
+    <br>
 
     <section>
-        <h2 id="margin">MVP</h2>
+        <h2 id="margin7">MVP</h2>
         <p>O MVP, Mínimo Produto Viável, é uma versão simplificada do produto que representa uma entrega de valor para o
             cliente. Ou seja,
             o MVP contém as funcionalidades necessárias para resolver o problema do cliente, porém não está completo.
