--- a/Páginas API/intro.html
+++ b/Páginas API/intro.html
@@ -54,7 +54,7 @@
     </header>
     <section>
 
-        <h2>O QUE É A METODOLOGIA ÁGIL?</h2>
+        <h2 id="h2">O QUE É A METODOLOGIA ÁGIL?</h2>
         <img src="imagens/introimg.png" id="introimg">
         <p>A metodologia ágil é uma forma de gerenciamento de projetos que permite um desenvolvimento
             mais flexível e adaptado. Como o próprio nome sugere, seu principal objetivo é
