--- a/Páginas API/master.html
+++ b/Páginas API/master.html
@@ -54,7 +54,7 @@
     </header>
     <main>
         <section>
-            <h2>O QUE É?</h2>
+            <h2 id="w">O QUE É?</h2>
             <img src="imagens/master.jpg" id="img">
             <p>O Scrum Master é o papel de líder responsável por facilitar e garantir o cumprimento dos processos Scrum.
                 No entanto, é importante destacar que o Scrum Master não é um chefe, pois, no Scrum, as equipes são
