--- a/Páginas API/scrum.html
+++ b/Páginas API/scrum.html
@@ -54,7 +54,7 @@
     </header>
 
     <section>
-        <h2 id="margin">O QUE É O MÉTODO SCRUM?</h2>
+        <h2 id="margin1">O QUE É O MÉTODO SCRUM?</h2>
         <img src="./imagens/imgscrum.png" id="imgscrum" alt="timescrum">
         <p>O método scrum é um modelo de gestão ágil amplamente utilizado não apenas no desenvolvimento de software,
             mas também em outras áreas onde a adaptabilidade é necessária. Ele abrange um conjunto de ferramentas,
@@ -96,7 +96,7 @@
     </section>
 
     <section>
-        <h2 id="margin">QUAIS OS BENEFÍCIOS DE USAR O SCRUM?</h2>
+        <h2 id="margin2">QUAIS OS BENEFÍCIOS DE USAR O SCRUM?</h2>
         <img src="./imagens/teamscrum.png" id="timescrum" alt="timescrum">
         <p>O scrum se destaca em relação a outras metodologias pela praticidade e eficiência, uma vez que permite que as
             equipes executem mudanças no projeto com mais rapidez. Os processos que envolvem a verificação do produto
