--- a/Páginas API/softskills.html
+++ b/Páginas API/softskills.html
@@ -54,7 +54,7 @@
     </header>
     <main>
         <section>
-            <h2 id="margin">O QUE SÃO?</h2>
+            <h2 id="margin8">O QUE SÃO?</h2>
             <p>Soft skill é o termo utilizado para se referir as habilidades e competências comportamentais de um
                 indivíduo,
                 como este se porta em meio a outros e até mesmo como ele trabalha/lida com suas próprias emoções.
